--- a/a3.html
+++ b/a3.html
@@ -9,7 +9,7 @@
 					<p>Click the btn with axisname on it to use that feature to color lines. Green always indicate small values. Default color (from red to blue)are decided by the id of those data.</p>
 					<p>Move mouse on axis or lines to get certain data to be highlight.</p>
 					<p>Click the flip button to flip axises.</p>
-					<p>Press and grag mouse to draw a bounding box and highlight those content in side.</p>
+					<p>Press and grag mouse to draw a bounding box (must have at least one axis inside the box) and highlight those content inside.</p>
 					<script type="application/processing" >
 					
 Table table;
